--- a/admin/html/admin.html
+++ b/admin/html/admin.html
@@ -1019,7 +1019,7 @@
             <button class="stat-btn favorites-count">
               <i class="fa-solid fa-heart"></i>
               <div class="stat-content">
-                <span class="stat-value" id="totalFavorites">0</span>
+                <span class="stat-value" id="totalFavorites">--</span>
                 <span class="stat-label">Total Favorites</span>
               </div>
             </button>
@@ -1356,8 +1356,6 @@
       </div>
     </div>
     <div class="cashier-tap-counter" id="cashierTapCounter"></div>
-
- 
 
     <!-- Bootstrap 5 JS Bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
