--- a/admin/html/customer-managemnet.html
+++ b/admin/html/customer-managemnet.html
@@ -59,9 +59,10 @@
         color: white;
         font-size: 1.5rem;
         font-weight: bold;
-        margin-bottom: 15px;
+        margin: 0 auto 15px auto;
         border: 3px solid var(--primary-pink);
       }
+
       /* Define CSS Variables based on your design */
       :root {
         --primary-pink: #e497aa;
