--- a/admin/html/cashier-mode.html
+++ b/admin/html/cashier-mode.html
@@ -1521,11 +1521,11 @@
                     }">
                         <img src="${
                           product.ImagePath ||
-                          "../images/placeholder-product.jpg"
+                          "/admin/uploads/product_images/no-image.png"
                         }" 
-                             class="product-image" 
-                             alt="${product.Name}"
-                             onerror="this.src='../images/placeholder-product.jpg'">
+     class="product-image" 
+     alt="${product.Name}"
+     onerror="this.src='/admin/uploads/product_images/no-image.png'">
                         <div class="card-body">
                             <div class="product-name">${product.Name}</div>
                             <div class="product-category">${
