--- a/admin/html/cashier-mode.html
+++ b/admin/html/cashier-mode.html
@@ -1521,11 +1521,11 @@
                     }">
                         <img src="${
                           product.ImagePath ||
-                          "/admin/uploads/product_images/no-image.png"
+                          "https://blessence.site/admin/uploads/product_images/no-image.png"
                         }" 
      class="product-image" 
      alt="${product.Name}"
-     onerror="this.src='/admin/uploads/product_images/no-image.png'">
+     onerror="this.src='https://blessence.site/admin/uploads/product_images/no-image.png'">
                         <div class="card-body">
                             <div class="product-name">${product.Name}</div>
                             <div class="product-category">${
