fix order history

--- a/user/html/order-history.html
+++ b/user/html/order-history.html
@@ -2497,7 +2497,7 @@
                 <i class="fas fa-shopping-bag"></i>
                 <h3>No Orders Yet</h3>
                 <p>You haven't placed any orders yet. Start shopping to see your order history here!</p>
-                <button class="btn btn-primary" onclick="window.location.href='/home.html'">Start Shopping</button>
+                <button class="btn btn-primary" onclick="window.location.href='/user/html/home.html'">Start Shopping</button>
             </div>
         `;
           return;
