--- a/admin/html/product-management.html
+++ b/admin/html/product-management.html
@@ -3579,8 +3579,8 @@
             const hasVariants = variants.length > 0;
             const badgeColor = hasVariants ? "success" : "danger";
             const badgeText = hasVariants
-              ? `${variants.length} variant(s)`
-              : "No variants";
+              ? `${variants.length} shade(s)`
+              : "No shades";
 
             // Parent Row
             const parentRow = document.createElement("tr");
