--- a/user/html/recommender.html
+++ b/user/html/recommender.html
@@ -1679,6 +1679,77 @@
         font-size: 1em;
       }
 
+      /* MOBILE OPTIMIZATION */
+@media (max-width: 768px) {
+  .attribute-summary {
+    margin: 6px 0;
+  }
+  
+  .attribute-header {
+    padding: 6px 10px !important;
+    font-size: 0.75em !important;
+    gap: 4px !important;
+    min-height: 32px;
+  }
+  
+  .attribute-text {
+    font-size: 0.8em;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    flex: 1;
+  }
+  
+  .attribute-toggle {
+    font-size: 0.9em !important;
+    opacity: 0.8;
+    flex-shrink: 0;
+  }
+}
+
+/* EXTRA SMALL MOBILE */
+@media (max-width: 400px) {
+  .attribute-header {
+    padding: 5px 8px !important;
+    font-size: 0.7em !important;
+    gap: 3px !important;
+    min-height: 28px;
+  }
+  
+  .attribute-text {
+    font-size: 0.75em;
+  }
+  
+  .attribute-toggle {
+    font-size: 0.8em !important;
+  }
+}
+
+/* DESKTOP */
+@media (min-width: 769px) {
+  .attribute-header {
+    padding: 8px 12px;
+    font-size: 0.8em;
+  }
+  
+  .attribute-header:hover {
+    background: rgba(59, 130, 246, 0.15);
+    transform: translateY(-1px);
+  }
+}
+
+.attribute-header:active {
+  transform: translateY(0);
+  background: rgba(59, 130, 246, 0.2);
+}
+
+.attribute-toggle {
+  font-weight: bold;
+  opacity: 0.7;
+  font-size: 1em;
+  flex-shrink: 0;
+}
+
       /* EXTERNAL FLOATING CARD - SINGLE SOURCE OF TRUTH */
       #external-attribute-card {
         display: none;
