--- a/user/html/recommender.html
+++ b/user/html/recommender.html
@@ -1638,81 +1638,73 @@
         margin-right: 4px;
       }
 
-      /* ===== ATTRIBUTE MATCHES STYLES - COMPACT ===== */
-      .attribute-summary {
-        margin: 10px 0;
-        position: relative;
-      }
+     /* ===== ATTRIBUTE MATCHES STYLES - COMPACT ===== */
+.attribute-summary {
+  margin: 10px 0;
+  position: relative;
+}
 
-      .attribute-header {
-        display: flex;
-        align-items: center;
-        gap: 8px;
-        padding: 10px 14px;
-        background: rgba(59, 130, 246, 0.1);
-        border: 1px solid rgba(59, 130, 246, 0.2);
-        border-radius: 8px;
-        cursor: pointer;
-        transition: all 0.3s ease;
-        font-size: 0.85em;
-        font-weight: 600;
-        color: #1e40af;
-        text-align: left;
-        justify-content: space-between;
-        -webkit-tap-highlight-color: transparent;
-        user-select: none;
-      }
+.attribute-header {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  padding: 10px 14px;
+  background: rgba(59, 130, 246, 0.1);
+  border: 1px solid rgba(59, 130, 246, 0.2);
+  border-radius: 8px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  font-size: 0.85em;
+  font-weight: 600;
+  color: #1e40af;
+  text-align: left;
+  justify-content: space-between; /* This keeps them side by side */
+  -webkit-tap-highlight-color: transparent;
+  user-select: none;
+}
 
-      .attribute-header:hover {
-        background: rgba(59, 130, 246, 0.15);
-        transform: translateY(-1px);
-      }
+.attribute-text {
+  flex: 1;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
 
-      .attribute-header:active {
-        transform: translateY(0);
-        background: rgba(59, 130, 246, 0.2);
-      }
+.attribute-toggle {
+  font-weight: bold;
+  opacity: 0.7;
+  font-size: 1em;
+  flex-shrink: 0; /* Prevents the icon from shrinking */
+}
 
-      .attribute-toggle {
-        font-weight: bold;
-        opacity: 0.7;
-        font-size: 1em;
-      }
-
-      /* MOBILE OPTIMIZATION */
+/* MOBILE OPTIMIZATION */
 @media (max-width: 768px) {
   .attribute-summary {
     margin: 6px 0;
   }
   
   .attribute-header {
-    padding: 6px 10px !important;
-    font-size: 0.75em !important;
-    gap: 4px !important;
+    padding: 6px 10px;
+    font-size: 0.75em;
+    gap: 6px;
     min-height: 32px;
   }
   
   .attribute-text {
     font-size: 0.8em;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    flex: 1;
   }
   
   .attribute-toggle {
-    font-size: 0.9em !important;
-    opacity: 0.8;
-    flex-shrink: 0;
+    font-size: 0.9em;
   }
 }
 
 /* EXTRA SMALL MOBILE */
 @media (max-width: 400px) {
   .attribute-header {
-    padding: 5px 8px !important;
-    font-size: 0.7em !important;
-    gap: 3px !important;
+    padding: 5px 8px;
+    font-size: 0.7em;
+    gap: 4px;
     min-height: 28px;
   }
   
@@ -1721,17 +1713,12 @@
   }
   
   .attribute-toggle {
-    font-size: 0.8em !important;
+    font-size: 0.8em;
   }
 }
 
-/* DESKTOP */
+/* DESKTOP HOVER EFFECTS */
 @media (min-width: 769px) {
-  .attribute-header {
-    padding: 8px 12px;
-    font-size: 0.8em;
-  }
-  
   .attribute-header:hover {
     background: rgba(59, 130, 246, 0.15);
     transform: translateY(-1px);
@@ -1741,13 +1728,6 @@
 .attribute-header:active {
   transform: translateY(0);
   background: rgba(59, 130, 246, 0.2);
-}
-
-.attribute-toggle {
-  font-weight: bold;
-  opacity: 0.7;
-  font-size: 1em;
-  flex-shrink: 0;
 }
 
       /* EXTERNAL FLOATING CARD - SINGLE SOURCE OF TRUTH */
